<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <ImageView
            android:id="@+id/mainPoster"
            android:layout_width="530dp"
            android:layout_height="298dp"
            android:src="@drawable/background"
            android:translationX="-25dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/mainPosterMask"
            android:layout_width="530dp"
            android:layout_height="298dp"
            android:scaleType="fitXY"
            android:src="@drawable/mask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/mainPoster" />

        <ImageView

            android:id="@+id/backArrow"
            android:layout_width="9dp"
            android:layout_height="15dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="59dp"
            android:src="@drawable/path"
            app:layout_constraintLeft_toLeftOf="@id/paddingLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="56dp"
            android:alpha="0.5"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/backArrow"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/pg_rectangle"
            app:layout_constraintBottom_toBottomOf="@id/pgRating"
            app:layout_constraintLeft_toLeftOf="@id/pgRating"
            app:layout_constraintRight_toRightOf="@id/pgRating"
            app:layout_constraintTop_toTopOf="@id/pgRating" />

        <TextView
            android:id="@+id/pgRating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/pgRating"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/title"
            app:layout_constraintLeft_toRightOf="@id/paddingLeft" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/not_so_white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/paddingLeft"
            app:layout_constraintRight_toLeftOf="@id/paddingRight"
            android:layout_marginTop="254dp"
            app:layout_constraintTop_toTopOf="@id/mainPoster"/>

        <TextView
            android:id="@+id/tag_line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/tagLine"
            android:textColor="@color/pink_ish"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@id/paddingLeft"
            app:layout_constraintRight_toLeftOf="@id/paddingRight"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <ImageView
            android:id="@+id/star_1"
            android:layout_width="14dp"
            android:layout_height="12dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/star_selected"
            app:layout_constraintLeft_toRightOf="@id/paddingLeft"
            app:layout_constraintTop_toBottomOf="@id/tag_line" />

        <ImageView
            android:id="@+id/star_2"
            android:layout_width="14dp"
            android:layout_height="12dp"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/star_selected"
            app:layout_constraintLeft_toRightOf="@id/star_1"
            app:layout_constraintTop_toBottomOf="@id/tag_line" />

        <ImageView
            android:id="@+id/star_3"
            android:layout_width="14dp"
            android:layout_height="12dp"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/star_selected"
            app:layout_constraintLeft_toRightOf="@id/star_2"
            app:layout_constraintTop_toBottomOf="@id/tag_line" />

        <ImageView
            android:id="@+id/star_4"
            android:layout_width="14dp"
            android:layout_height="12dp"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/star_selected"
            app:layout_constraintLeft_toRightOf="@id/star_3"
            app:layout_constraintTop_toBottomOf="@id/tag_line" />

        <ImageView
            android:id="@+id/star_5"
            android:layout_width="14dp"
            android:layout_height="12dp"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/star"
            app:layout_constraintLeft_toRightOf="@id/star_4"
            app:layout_constraintTop_toBottomOf="@id/tag_line" />

        <TextView
            android:id="@+id/reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="4dp"
            android:text="@string/reviews"
            android:textColor="@color/gray_ish"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/star_5"
            app:layout_constraintTop_toBottomOf="@id/tag_line" />

        <TextView
            android:id="@+id/storylineTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/storylineHeader"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/paddingLeft"
            app:layout_constraintRight_toLeftOf="@id/paddingRight"
            app:layout_constraintTop_toBottomOf="@id/reviews" />

        <TextView
            android:id="@+id/storylineDescription"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="4dp"
            android:alpha="0.75"
            android:gravity="center_vertical"
            android:text="@string/storylineDescription"
            android:textColor="@color/white"
            android:lineSpacingExtra="4sp"
            app:layout_constraintLeft_toRightOf="@id/paddingLeft"
            app:layout_constraintRight_toLeftOf="@id/paddingRight"
            app:layout_constraintTop_toBottomOf="@id/storylineTitle" />

        <TextView
            android:id="@+id/cast_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Cast"
            android:lineSpacingExtra="8sp"
            android:textColor="@color/white"
            app:layout_constraintLeft_toRightOf="@id/paddingLeft"
            app:layout_constraintTop_toBottomOf="@id/storylineDescription" />

        <ImageView
            android:id="@+id/cast1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/robert_downey_jr2"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toStartOf="@+id/cast2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/paddingLeft"
            app:layout_constraintTop_toBottomOf="@id/cast_title" />

        <ImageView
            android:id="@+id/cast2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/chris_evans2"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toStartOf="@+id/cast3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cast1"
            app:layout_constraintTop_toBottomOf="@id/cast_title" />

        <ImageView
            android:id="@+id/cast3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/mark_ruffalo2"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toStartOf="@+id/cast4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cast2"
            app:layout_constraintTop_toBottomOf="@id/cast_title" />

        <ImageView
            android:id="@+id/cast4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/chris_hemsworth2"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="@id/paddingRight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cast3"
            app:layout_constraintTop_toBottomOf="@id/cast_title" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/cast1"
            android:textColor="@color/actor_name_color"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/cast1"
            app:layout_constraintRight_toRightOf="@id/cast1"
            app:layout_constraintTop_toBottomOf="@id/cast1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/cast2"
            android:textColor="@color/actor_name_color"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/cast2"
            app:layout_constraintRight_toRightOf="@id/cast2"
            app:layout_constraintTop_toBottomOf="@id/cast2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/cast3"
            android:textColor="@color/actor_name_color"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/cast3"
            app:layout_constraintRight_toRightOf="@id/cast3"
            app:layout_constraintTop_toBottomOf="@id/cast3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/cast4"
            android:textColor="@color/actor_name_color"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/cast4"
            app:layout_constraintRight_toRightOf="@id/cast4"
            app:layout_constraintTop_toBottomOf="@id/cast4" />




        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/paddingLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/main_left_padding" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/paddingRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/main_left_padding" />
    </androidx.constraintlayout.widget.ConstraintLayout>





</ScrollView>